# haskell-libp2p

./: .gitignore  CHANGELOG.md  README.md  flake.nix  haskell-libp2p.cabal  justfile
.github/workflows/: ci.yml
lib/: Libp2p.hs
lib/Libp2p/: FFI.hs  Node.hs  Protocol.hs  Stream.hs  Types.hs
nix/: project.nix  rust-lib.nix
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: lib.rs
test/spec/Libp2p/: EchoSpec.hs
